# wat

./: CMakeLists.txt  Makefile  README.md  bench.c  bench2.c  bench3.c  bench4.c  cgt.c  gp.c  rdtscp.c  rdtscp.h  sy.c  util.h
